fix: #1105 fixed align styles to tags, skills

--- a/mw-webapp/src/component/modal/PromptModalContent.module.scss
+++ b/mw-webapp/src/component/modal/PromptModalContent.module.scss
@@ -6,7 +6,5 @@
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
   gap: $gapBig;
 }
